--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,3 +1,9 @@
 header {
+    display: flex;
+    align-items: center;
     background: #eee;
+    height: 3rem;
+    padding-left: 1em;
+    font-weight: bold;
+    font-size: 1.4em; 
 }
