--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -5,5 +5,11 @@ header {
     height: 3rem;
     padding-left: 1em;
     font-weight: bold;
-    font-size: 1.4em; 
+    font-size: 1.4em;
+
+    img {
+        position: relative;
+        top: 0.2em;
+        width: 1em;
+    }
 }
