--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'normalize.css';
 
+html, body {
+    height: 100%;
+}
+
 body{
     font-family: 'Open Sans', sans-serif;
+    
 }
