--- a/src/app/layout/body/body.component.scss
+++ b/src/app/layout/body/body.component.scss
@@ -1,5 +1,16 @@
 @import 'src/scss/variables';
 
 main {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
     height: calc(100% - #{$header-height * 2});
+    button {
+        font-size: 1em;
+        padding: 1em;
+
+        @media only screen and (max-width: 768px) {
+            font-size: 4vw;
+        }
+    }
 }
