--- a/src/app/layout/body/body.component.html
+++ b/src/app/layout/body/body.component.html
@@ -1,4 +1,3 @@
 <main>
-  <button>Crée un nouveau Quizz&nbsp;!</button>
-  <button>Liste les Quizz&nbsp;!</button>
+  <router-outlet></router-outlet>
 </main>
