--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,9 @@ html, body {
 }
 
 body{
-    font-family: 'Open Sans', sans-serif;
-    
+    font-family: 'Open Sans', sans-serif;   
+}
+
+p {
+    margin: 0;
 }
