--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,4 +1,4 @@
 <div>
-  <button routerLink="/create">Crée un nouveau Quizz&nbsp;!</button>
-  <button>Liste les Quizz&nbsp;!</button>
+  <button [routerLink]="'/create'">Crée un nouveau Quizz&nbsp;!</button>
+  <button [routerLink]="'/list'">Liste les Quizz&nbsp;!</button>
 </div>
