--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,3 +1,3 @@
 <header>
-  <div class="logo"><img src="assets/images/pros-and-cons.svg" alt="">   Quizz</div>
+  <div class="logo" routerLink="/"><img src="assets/images/pros-and-cons.svg" alt="">   Quizz</div>
 </header>
