--- a/src/app/routes/create/create.component.html
+++ b/src/app/routes/create/create.component.html
@@ -1,3 +1,8 @@
-<p>
-  create works!
-</p>
+
+<form>
+  <label>
+    <div>Nom de quizz</div>
+    <input type="text" name="name">
+  </label>
+  <button>Suivant</button>
+</form>
