--- a/src/app/routes/create/create.component.html
+++ b/src/app/routes/create/create.component.html
@@ -1,8 +1,8 @@
 
-<form>
+<form [formGroup]="f">
   <label>
     <div>Nom de quizz</div>
-    <input type="text" name="name">
+    <input type="text" name="name" formControlName="name">
   </label>
   <button>Suivant</button>
 </form>
