--- a/src/app/routes/create/create.component.html
+++ b/src/app/routes/create/create.component.html
@@ -2,7 +2,7 @@
 <form [formGroup]="f" (submit)="submit()">
   <label>
     <div>Nom de quizz</div>
-    <input type="text" name="name" formControlName="name">
+    <input type="text" name="name" formControlName="name" placeholder="ex: toto">
   </label>
   <button [disabled]="f.invalid">Suivant</button>
 </form>
