--- a/src/app/routes/list/list.component.html
+++ b/src/app/routes/list/list.component.html
@@ -1,3 +1,3 @@
-<ul>
-  <li *ngFor="let q of quizzList">{{q.name}}</li>
-</ul>
+<div>
+  <button *ngFor="let q of quizzList">{{q.name}}</button>
+</div>
