--- a/src/app/routes/create/create.component.scss
+++ b/src/app/routes/create/create.component.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    min-height: inherit;
     label {
         padding: 1em;
     }
