--- a/src/app/routes/list/list.component.scss
+++ b/src/app/routes/list/list.component.scss
@@ -6,7 +6,7 @@ div {
     display: flex;
     min-height: $minHeight;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-content: center;
     button {
         display: flex;
