--- a/src/app/routes/create-questions/create-questions.component.html
+++ b/src/app/routes/create-questions/create-questions.component.html
@@ -1,4 +1,4 @@
 <div>
-  <button>Ajouter une question</button>
-  <button>Sauver le Quizz</button>
+  <button routerLink="/add-question">Ajouter une question</button>
+  <button routerLink="/save">Sauver le Quizz</button>
 </div>
