--- a/src/app/routes/save-success/save-success.component.html
+++ b/src/app/routes/save-success/save-success.component.html
@@ -1,3 +1,6 @@
-<p>
-  save-success works!
-</p>
+<div>
+  <fa-icon [icon]="faSmileWink"></fa-icon>
+  <p class="big">Bravo !</p>
+  <p>Votre Quizz est sauvé</p>
+  <button>Retour accueil</button>
+</div>
