--- a/src/app/routes/save-success/save-success.component.html
+++ b/src/app/routes/save-success/save-success.component.html
@@ -2,5 +2,5 @@
   <fa-icon [icon]="faSmileWink"></fa-icon>
   <p class="big">Bravo !</p>
   <p>Votre Quizz est sauvé</p>
-  <button>Retour accueil</button>
+  <button routerLink="/">Retour accueil</button>
 </div>
