--- a/src/app/routes/save-success/save-success.component.scss
+++ b/src/app/routes/save-success/save-success.component.scss
@@ -1,3 +1,26 @@
 fa-icon {
-    font-size: 8em;
+  font-size: 8em;
+}
+
+:host {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: inherit;
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    p.big {
+      font-weight: bold;
+      font-size: 2em;
+      text-align: center;
+    }
+    button {
+      margin: 1em;
+      padding: 1em;
+      border: none;
+    }
+  }
 }
