--- a/src/app/routes/create-questions/create-questions.component.html
+++ b/src/app/routes/create-questions/create-questions.component.html
@@ -1,4 +1,5 @@
 <div>
+  <p>Quizz : {{q.name}}</p>
   <p>Nombre de questions : {{q.questions.length}}</p>
   <button routerLink="/add-question">Ajouter une question</button>
   <button routerLink="/save">Sauver le Quizz</button>
