--- a/src/app/routes/list/list.component.html
+++ b/src/app/routes/list/list.component.html
@@ -1,3 +1,3 @@
 <div>
-  <button *ngFor="let q of quizzList">{{q.name}}</button>
+  <button *ngFor="let q of quizzList" [routerLink]="['/execute', q.name]">{{q.name}}</button>
 </div>
