--- a/src/app/routes/execute/execute.component.html
+++ b/src/app/routes/execute/execute.component.html
@@ -1,3 +1,20 @@
 <div>
   <h1>Quizz {{q.name}}</h1>
+  <h2>Question {{currentQuestionIndex}}</h2>
+  <div class="question">{{q.questions[currentQuestionIndex].text}}</div>
+  <div class="answers">
+    <label>
+      <input type="radio" ><span>{{q.questions[currentQuestionIndex].answer1}}</span>
+    </label>
+    <label>
+      <input type="radio" ><span>{{q.questions[currentQuestionIndex].answer2}}</span>
+    </label>
+    <label>
+      <input type="radio" ><span>{{q.questions[currentQuestionIndex].answer3}}</span>
+    </label>
+    <label>
+      <input type="radio" ><span>{{q.questions[currentQuestionIndex].answer4}}</span>
+    </label>
+  </div>
+  <button>Valider votre réponse</button>
 </div>
