--- a/src/app/routes/add-question/add-question.component.scss
+++ b/src/app/routes/add-question/add-question.component.scss
@@ -38,11 +38,11 @@ div.frame {
         }
     }
     button {
-        margin: 1em;
+        margin: 0 1em;
         padding: 1em;
         border: none;
         @media only screen and (max-width: 768px) {
-            margin: 0.5em;
+            margin: 0 0.5em;
         }
     }
 }
