--- a/src/app/routes/create-questions/create-questions.component.scss
+++ b/src/app/routes/create-questions/create-questions.component.scss
@@ -9,7 +9,7 @@
         flex-direction: column;
 
         button {
-            margin: 1em;
+            margin: 0 1em;
             padding: 1em;
             border: none;
         }
