--- a/src/app/routes/execute/execute.component.html
+++ b/src/app/routes/execute/execute.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="frame">
   <h1>Quizz {{q.name}}</h1>
   <h2>Question {{currentQuestionIndex + 1}} / {{q.questions.length}}</h2>
   <div class="question">{{q.questions[currentQuestionIndex].text}}</div>
