--- a/src/app/routes/save-success/save-success.component.scss
+++ b/src/app/routes/save-success/save-success.component.scss
@@ -18,7 +18,7 @@ fa-icon {
       text-align: center;
     }
     button {
-      margin: 1em;
+      margin: 0 1em;
       padding: 1em;
       border: none;
     }
