--- a/src/app/routes/execute/execute.component.scss
+++ b/src/app/routes/execute/execute.component.scss
@@ -7,6 +7,14 @@
     height: 100%;
     min-height: inherit;
 
+    .frame {
+        width: 30em;
+        @media only screen and (max-width: 768px) {
+            width: 20em;
+            padding: 0 0.5em;
+        }
+    }
+
     label {
         padding: 0.2em 0;
         span {
