--- a/src/app/routes/list/list.component.scss
+++ b/src/app/routes/list/list.component.scss
@@ -13,7 +13,7 @@ div {
         min-width: 8em;
         height: 8em;
         background: #eee;
-        margin: 1em;
+        margin: 0 1em;
         justify-content: center;
         align-items: center;
         border: none;
