--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,13 +7,16 @@ html, body {
 
 * {
     box-sizing: border-box;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 body{
-    font-family: 'Open Sans', sans-serif;   
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.5vw;  
 }
 
-p, ul {
+p, ul, h1, h2 {
     margin: 0;
 }
 
