--- a/src/app/routes/execute/execute.component.html
+++ b/src/app/routes/execute/execute.component.html
@@ -2,19 +2,21 @@
   <h1>Quizz {{q.name}}</h1>
   <h2>Question {{currentQuestionIndex + 1}} / {{q.questions.length}}</h2>
   <div class="question">{{q.questions[currentQuestionIndex].text}}</div>
-  <div class="answers">
-    <label>
-      <input type="radio" ><span>{{q.questions[currentQuestionIndex].answer1}}</span>
-    </label>
-    <label>
-      <input type="radio" ><span>{{q.questions[currentQuestionIndex].answer2}}</span>
-    </label>
-    <label>
-      <input type="radio" ><span>{{q.questions[currentQuestionIndex].answer3}}</span>
-    </label>
-    <label>
-      <input type="radio" ><span>{{q.questions[currentQuestionIndex].answer4}}</span>
-    </label>
-  </div>
-  <button>Valider votre réponse</button>
+  <form [formGroup]="f" (ngSubmit)="submit()">
+    <div class="answers">
+      <label>
+        <input type="radio" value="A" formControlName="answer"><span>{{q.questions[currentQuestionIndex].answer1}}</span>
+      </label>
+      <label>
+        <input type="radio" value="B" formControlName="answer"><span>{{q.questions[currentQuestionIndex].answer2}}</span>
+      </label>
+      <label>
+        <input type="radio" value="C" formControlName="answer"><span>{{q.questions[currentQuestionIndex].answer3}}</span>
+      </label>
+      <label>
+        <input type="radio" value="D" formControlName="answer"><span>{{q.questions[currentQuestionIndex].answer4}}</span>
+      </label>
+    </div>
+    <button [disabled]="f.invalid">Valider votre réponse</button>
+  </form>
 </div>
