--- a/src/app/routes/summary/summary.component.html
+++ b/src/app/routes/summary/summary.component.html
@@ -1,3 +1,7 @@
 <div class="frame">
   <h1>Quizz {{q.name}}</h1>
+  <fa-icon [icon]="faSmileWink"></fa-icon>
+  <p>Bravo !</p>
+  <p class="score">Votre score: {{quizzProgress.score}} / {{q.questions.length}}</p>
+  <button>Retour Accueil</button>
 </div>
