--- a/src/app/routes/create-questions/create-questions.component.scss
+++ b/src/app/routes/create-questions/create-questions.component.scss
@@ -7,11 +7,10 @@
     div {
         display: flex;
         flex-direction: column;
-
+        height: 10em;
+        justify-content: space-between;
         button {
             margin: 0 1em;
-            padding: 1em;
-            border: none;
         }
     }
 }
